# kinetics-model-selector

./: LICENSE  README.md  cli.py  numpy.py  pyproject.toml
config/: analysis.py
docs/: priors_and_noise.md
kinetics_model_selector/: __init__.py  cli.py  mathutils.py  selection.py  uncertainty.py
kinetics_model_selector/models/: __init__.py  langmuir_hinshelwood.py  pfo.py  pso.py
plotting/: __init__.py  residuals.py
reporting/: final_report.py
selection/: __init__.py  bayesian.py  compare.py
src/kinetics_model_selector/: __init__.py  cli.py  io.py
src/kinetics_model_selector/models/: __init__.py  base.py  langmuir_hinshelwood.py  pfo.py  pso.py  validation.py
src/kinetics_model_selector/selection/: __init__.py
tests/: conftest.py  test_bayesian_and_mc.py  test_cli_smoke.py  test_parameter_recovery.py  test_selection.py  test_uncertainty.py
tests/fixtures/: lh_clean.csv  lh_noisy.csv  pfo_clean.csv  pfo_noisy.csv  pso_clean.csv  pso_noisy.csv
uncertainty/: monte_carlo.py
