[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kinetics-model-selector"
version = "0.1.0"
description = "Tools for kinetic model selection from concentration-time data."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Kinetics Model Selector Contributors" }
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=1.5",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
bayesian = [
  "pymc>=5.0",
  "arviz>=0.15",
]

[project.scripts]
kinetics-model-selector = "kinetics_model_selector.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
